--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"@opentelemetry/exporter-trace-otlp-grpc": "^0.48.0",
 		"@opentelemetry/id-generator-aws-xray": "^1.2.2",
 		"@opentelemetry/instrumentation-aws-sdk": "^0.38.1",
+		"@opentelemetry/instrumentation-express": "^0.40.1",
+		"@opentelemetry/instrumentation-http": "^0.52.0",
 		"@opentelemetry/instrumentation-mongoose": "^0.39.0",
 		"@opentelemetry/propagator-aws-xray": "^1.3.1",
 		"@opentelemetry/resources": "^1.21.0",
